# codesnap.nvim

./: .gitignore  COVER.md  README.md  project.toml
.github/workflows/: build.yaml  release.yml
generator/: Cargo.toml
generator/src/: lib.rs
lua/codesnap/: config.lua  fetch.lua  highlight.lua  init.lua  modal.lua  module.lua  path.lua  static.lua
lua/codesnap/utils/: list.lua  path.lua  platform.lua  string.lua  table.lua  visual.lua
plugin/: codesnap.lua
