[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
codesnap = { version = "0.12.10", features = ["full"] }
mlua = { version = "0.10.0", features = ["module", "luajit", "serialize"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }
# Force vendored OpenSSL for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }

